--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@types/node": "^18.15.13",
     "@vitejs/plugin-vue": "^4.1.0",
     "concurrently": "^8.0.1",
-    "sass": "^1.62.0",
+    "postcss-nesting": "^11.2.2",
     "typescript": "^5.0.4",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.1",
     "vue-tsc": "^1.4.2",
     "ws": "^8.13.0"
