--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \n\nReplace this command with your own test runner.\n\n"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "typescript": "^5.0.4",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.1",
+    "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.4.2",
     "ws": "^8.13.0"
   }
