--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test": "echo \n\nReplace this command with your own test runner.\n\n"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "maska": "^2.1.8",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.0.35",
     "vue": "^3.2.47"
   },
   "devDependencies": {
