--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
+    "date-fns": "^2.29.3",
     "maska": "^2.1.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.35",
