--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
+    "apexcharts": "^3.39.0",
     "date-fns": "^2.29.3",
     "maska": "^2.1.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.35",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.13",
