--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "0.1.1",
   "scripts": {
     "dev": "concurrently \"node server.mjs\" \"vite\"",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "run-p type-check build-only",
     "preview": "concurrently \"node server.mjs\" \"vite preview\"",
-    "test": "echo \n\nReplace this command with your own test runner.\n\n"
+    "test": "echo \n\nReplace this command with your own test runner.\n\n",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@vuelidate/core": "^2.0.2",
@@ -29,6 +34,18 @@
     "vite": "^4.3.1",
     "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.4.2",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@types/jsdom": "^21.1.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.3.0",
+    "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "jsdom": "^21.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.4",
+    "vitest": "^0.29.1"
   }
 }
