--- a/package.json
+++ b/package.json
@@ -16,36 +16,36 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
-    "apexcharts": "^3.39.0",
+    "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
     "maska": "^2.1.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
-    "vue3-apexcharts": "^1.4.1"
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.13",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "concurrently": "^8.0.1",
-    "postcss-nesting": "^11.2.2",
-    "typescript": "^5.0.4",
-    "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.1",
-    "vite-svg-loader": "^4.0.0",
-    "vue-tsc": "^1.4.2",
-    "ws": "^8.13.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
+    "@types/node": "^18.15.13",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "concurrently": "^8.0.1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss-nesting": "^11.2.2",
     "prettier": "^2.8.4",
-    "vitest": "^0.29.1"
+    "typescript": "^5.0.4",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.3.1",
+    "vite-svg-loader": "^4.0.0",
+    "vitest": "^0.29.1",
+    "vue-tsc": "^1.4.2",
+    "ws": "^8.13.0"
   }
 }
