--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "concurrently \"node server.mjs\" \"vite\"",
     "build": "run-p type-check build-only",
     "preview": "concurrently \"node server.mjs\" \"vite preview\"",
-    "test": "echo \n\nReplace this command with your own test runner.\n\n",
-    "test:unit": "vitest",
+    "test": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
